licenses(["notice"])

TEST_SRCS = glob(["test_*.cc"]) + ["test.cc"]

filegroup(
    name = "fmts_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "fmts_srcs",
    srcs = glob(["*.cc"], exclude=TEST_SRCS),
)

filegroup(
    name = "srcs",
    srcs = [
        ":fmts_hdrs",
        ":fmts_srcs",
        "BUILD.bazel",
    ] + TEST_SRCS,
    visibility = ["//visibility:public"],
)

######### LIBRARIES #########

cc_library(
    name = "fmts",
    hdrs = [":fmts_hdrs"],
    srcs = [":fmts_srcs"],
    deps = ["//cisab/types"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = TEST_SRCS,
    deps = [
        ":fmts",
        "@gtest//:gtest",
    ],
    linkstatic = True,
)
