licenses(["notice"])

TEST_SRCS = ["test.cc"]

filegroup(
    name = "logs_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "logs_srcs",
    srcs = glob(["*.cc"], exclude=TEST_SRCS),
)

filegroup(
    name = "srcs",
    srcs = [
        ":logs_hdrs",
        ":logs_srcs",
        "BUILD.bazel",
    ] + TEST_SRCS,
    visibility = ["//visibility:public"],
)

######### LIBRARIES #########

cc_library(
    name = "logs",
    hdrs = [":logs_hdrs"],
    srcs = [":logs_srcs"],
    deps = ["//cisab/fmts:fmts"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = TEST_SRCS,
    deps = [
        ":logs",
        "@gtest//:gtest",
    ],
    linkstatic = True,
)
