licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":types_hdrs",
        ":types_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "types_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "types_srcs",
    srcs = glob(["*.cc"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARIES #########

cc_library(
    name = "types",
    hdrs = [":types_hdrs"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "medium",
    srcs = [":test_srcs"],
    deps = [
        ":types",
        "@gtest//:gtest",
    ],
    linkstatic = True,
    copts = ["-std=c++17"],
)
