licenses(["notice"])

TEST_SRCS = ["test.cc"]

filegroup(
    name = "types_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "srcs",
    srcs = [
        ":types_hdrs",
        "BUILD.bazel",
    ] + TEST_SRCS,
    visibility = ["//visibility:public"],
)

######### LIBRARIES #########

cc_library(
    name = "types",
    hdrs = [":types_hdrs"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "medium",
    srcs = TEST_SRCS,
    deps = [
        ":types",
        "@gtest//:gtest",
    ],
    linkstatic = True,
)
